# solana-helloworld

./: README.md
app/: package.json  vite.config.ts
app/src/: App.module.scss  App.tsx  ControlPanel.tsx  main.tsx
app/src/transactions/: GreetingAccount.ts  airdrop.ts  createProgramAccount.ts  getNumGreetings.ts  hello.ts
program/: .gitignore  Cargo.toml  build.sh
